k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-flask-mvc
  labels:
    app.kubernetes.io/name: todo-flask-mvc
